feat: implement role-based access control (RBAC) with permission checks
- Added rbac.ts to define role permissions and permission checking functions.
- Implemented functions to check if a user has specific, any, or all permissions.
- Created a middleware function for permission checks before executing actions.
- Introduced permission groups for common checks.

feat: enhance API error handling with type safety

- Created api-types.ts to extend API error types with better typing.
- Added helper functions to create typed API errors and responses.

feat: add runtime type validation utilities

- Introduced type-validators.ts for type validation errors and type guard utilities.
- Implemented runtime validation for objects, arrays, and strings with detailed error reporting.

feat: standardize error handling and display

- Developed errorHandling.ts for consistent error handling and user notifications.
- Created functions to display errors, success, info, and warning messages using toasts.

feat: sanitize user input to prevent XSS attacks

- Added sanitize.ts for sanitizing HTML content and user inputs.
- Implemented specific sanitization functions for notes, descriptions, and customer names.

feat: extend intervention and photo types for better type safety

- Created intervention-extended.types.ts for detailed intervention data types and type guards.
- Developed photo-extended.types.ts for enhanced photo data types, including annotations and quality metrics.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,16 +18,23 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:coverage:check": "jest --coverage --coverageThreshold='{\"global\":{\"branches\":70,\"functions\":70,\"lines\":70,\"statements\":70}}' --watchAll=false",
-    "e2e": "playwright test",
-    "e2e:ui": "playwright test --ui",
-    "analyze": "webpack-bundle-analyzer .next/static/chunks/*.js"
+    "test:ci": "jest --coverage --watchAll=false --passWithNoTests",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "test:components": "jest --testPathPattern=src/components/**/__tests__",
+    "test:hooks": "jest --testPathPattern=src/hooks/**/__tests__",
+    "test:integration": "jest --testPathPattern=src/**/integration.test.{ts,tsx}",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:codegen": "playwright codegen",
+    "analyze": "npm run build && npx @next/bundle-analyzer"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/d3": "^7.4.3",
     "@types/jest": "^30.0.0",
@@ -46,10 +53,12 @@
     "jscpd": "^3.5.10",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.3.0",
     "webpack-bundle-analyzer": "^4.10.1"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -74,16 +83,17 @@
     "@supabase/supabase-js": "^2.75.0",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-virtual": "^3.13.12",
-    "@hello-pangea/dnd": "^18.0.1",
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-shell": "^2.3.1",
+    "@types/dompurify": "^3.0.5",
     "@types/leaflet": "^1.9.21",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
